--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 	},
 	"sideEffects": false,
 	"scripts": {
-		"test": "xo && ava"
+		"test": "xo && ava && tsc index.d.ts"
 	},
 	"files": [
 		"index.js",
@@ -47,6 +47,7 @@
 	],
 	"devDependencies": {
 		"ava": "^5.3.1",
+		"typescript": "^5.2.2",
 		"xo": "^0.56.0"
 	}
 }
