--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"node": ">=18"
 	},
 	"scripts": {
-		"test": "xo && ava && tsc index.d.ts"
+		"test": "xo && ava && tsc --lib es2023 index.d.ts"
 	},
 	"files": [
 		"index.js",
@@ -46,9 +46,9 @@
 		"hexadecimal"
 	],
 	"devDependencies": {
-		"ava": "^6.0.1",
-		"typescript": "^5.3.3",
-		"xo": "^0.56.0",
-		"benchmark": "2.1.4"
+		"ava": "^6.4.1",
+		"benchmark": "2.1.4",
+		"typescript": "^5.9.3",
+		"xo": "^1.2.3"
 	}
 }
